--- a/scss/_innerPage.scss
+++ b/scss/_innerPage.scss
@@ -487,7 +487,7 @@
                         padding: 20px 24px;
                         font-size: 17px;
                         letter-spacing: 2px;
-                        color: $main_Color7;
+                        color: $main_Color;
                         font-weight: bold;
                     }
                     table {
